--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,7 +7,7 @@
     color: $color-white;
     border: 2px solid $color-white;
     padding: 2.5rem 2.2rem 1.7rem;
-    font-size: clamp(4rem, calc(8.56vw + 1rem), 5.6rem);
+    font-size: clamp(4rem, calc(8vw + 1rem), 5.6rem);
     line-height: 0.95;
     width: 100%;
     max-width: 48rem;
@@ -60,6 +60,7 @@
 }
 
 .description {
+  font-size: 1.5rem;
   color: $color-grey;
   line-height: 1.68;
   padding: 0 1.5rem;
