--- a/sass/layout/_creations.scss
+++ b/sass/layout/_creations.scss
@@ -2,6 +2,7 @@
   width: 100%;
   padding: 0 2.4rem;
   display: grid;
+  grid-gap: 3.2rem;
   text-align: center;
 
   @media only screen and (min-width: 750px) {
@@ -26,7 +27,7 @@
 }
 
 .card-container {
-  margin: 4.8rem 0 3.2rem;
+  margin-top: 1.6rem;
   display: grid;
   grid-gap: 2.4rem;
   justify-content: center;
@@ -37,7 +38,7 @@
   overflow: hidden;
 
   @media only screen and (min-width: 750px) {
-    margin: 0;
+    margin-top: 0;
     grid-gap: 3rem;
     grid-area: cards;
   }
