--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -60,7 +60,7 @@
       font-family: inherit;
       font-weight: inherit;
       text-transform: capitalize;
-      font-size: inherit;
+      font-size: 1.5rem;
       padding-bottom: unset;
     }
 
