Feedback tweaks (see description)
- Changed header alt text for better accessibility
- Added temporary focus styling (rather than lumping hover and focus styles together)
- Changed card h3s to p tags as they are technically not headings (although styled like the rest of the headings on the page)
- Change footer links container to a nav for better semantics and added an aria-label

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -33,10 +33,14 @@ a {
 
 button {
   border: none;
-  outline-offset: 5px;
+  outline-offset: 0.5rem;
   background-color: transparent;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+:focus {
+  outline-offset: 0.5rem;
 }
